--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "bootstrap": "^4.0.0",
     "google-map-react": "^0.34.0",
+    "google-maps-for-react": "^1.1.2",
     "google-maps-react": "^1.1.2",
     "image-webpack-loader": "^4.1.0",
     "jquery": "^3.3.1",
