--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-autosuggest": "^0.5.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-google-maps": "^9.4.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "reactstrap": "^5.0.0-beta.2"
+    "react-tabs": "^2.2.1",
+    "reactstrap": "^5.0.0-beta.2",
+    "semantic-ui-react": "^0.78.3"
   }
 }
