--- a/package.json
+++ b/package.json
@@ -1,48 +1,11 @@
 {
-  "name": "npm-app",
+  "name": "appointity",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --display-error-details",
-    "start": "webpack-dev-server --progress --colors --inline --content-base build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.10",
-    "file-loader": "^1.1.11",
-    "style-loader": "^0.20.2",
-    "url-loader": "^1.0.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
-    "babel-plugin-lodash": "^3.3.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "bootstrap": "^4.0.0",
-    "google-map-react": "^0.34.0",
-    "google-maps-for-react": "^1.1.2",
-    "google-maps-react": "^1.1.2",
-    "image-webpack-loader": "^4.1.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.12.9",
-    "react": "^16.2.0",
-    "react-bootstrap": "^0.32.1",
-    "react-bootstrap-autosuggest": "^0.5.0",
-    "react-dom": "^16.2.0",
-    "react-fontawesome": "^1.6.1",
-    "react-google-maps": "^9.4.5",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-tabs": "^2.2.1",
-    "reactstrap": "^5.0.0-beta.2",
-    "semantic-ui-react": "^0.78.3"
-  }
+  "license": "ISC"
 }
