--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "ScheduleSmart",
   "license": "ISC",
   "dependencies": {
-    "atomos": "^0.5.0-alpha",
+    "@atomos/logging": "^1.0.1",
+    "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -24,7 +25,8 @@
     "npm": "^5.8.0",
     "routes": "^2.1.0",
     "sequelize": "^4.37.6",
-    "tedious": "^2.3.1"
+    "tedious": "^2.3.1",
+    "winston": "^2.4.1"
   },
   "devDependencies": {
     "aws-sdk": "^2.224.1",
