--- a/client/package.json
+++ b/client/package.json
@@ -4,36 +4,54 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --display-error-details",
     "start":
-      "webpack-dev-server --progress --colors --inline --content-base build"
+      "webpack-dev-server --progress --colors --inline --content-base build",
+    "test": "react-scripts test --env=jsdom"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "prop-types": "^15.6.0",
+    "react-scripts": "1.0.7",
+    "redux-immutable-state-invariant": "^1.2.4"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-redux": "^5.0.7",
+    "@sentry/browser": "~4.0.6",
+    "fast-deep-equal": "^2.0.1",
+    "jquery": "^3.3.1",
+    "lodash.debounce": "^4.0.8",
+    "material-ui": "^0.19.4",
+    "moment": "^2.19.3",
+    "moment-timezone": "0.5.23",
+    "pell": "^1.0.4",
+    "qs": "^6.5.2",
+    "react": "~16.3.2",
+    "react-accessible-accordion": "^1.0.2",
+    "react-beautiful-dnd": "~7.1.2",
+    "react-datepicker": "^1.6.0",
+    "react-dom": "~16.3.2",
+    "react-redux": "~5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-tabs": "^2.2.1",
+    "react-swipeable-views": "^0.12.8",
+    "react-table": "^6.6.0",
+    "react-text-mask": "^5.0.2",
+    "react-tooltip": "^3.6.1",
+    "react-virtualized": "^9.12.0",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^2.10.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.79.1",
-    "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1"
+    "signalr": "^2.2.3",
+    "socket.io-client": "~2.1.1",
+    "text-mask-addons": "^3.6.0",
+    "toastr": "^2.1.4",
+    "uuid": "^3.1.0",
+    "vanilla-masker": "^1.2.0"
+  },
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:3000"
+    }
   }
 }
