--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "routes": "^2.1.0",
     "sequelize": "^4.37.6",
     "tedious": "^2.3.1",
-    "winston": "^2.4.1"
+    "winston": "^2.4.1",
+    "cors": "^2.8.4"
   },
   "devDependencies": {
     "aws-sdk": "^2.224.1",
