--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@atomos/logging": "^1.0.1",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "js-yaml": "^3.11.0",
@@ -26,8 +27,8 @@
     "routes": "^2.1.0",
     "sequelize": "^4.37.6",
     "tedious": "^2.3.1",
-    "winston": "^2.4.1",
-    "cors": "^2.8.4"
+    "webpack": "^4.29.3",
+    "winston": "^2.4.1"
   },
   "devDependencies": {
     "aws-sdk": "^2.224.1",
